# newbroker

./: build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
broker/: settings.py  urls.py
static/: caroulselCard.css  dashboard.css  style.css  style2.css
static/chatmenu/: css.css
static/images/: html.html
staticfiles/: coingecko-coin-price-static-headline-widget.js  login.css
templates/: 500.html  base.html  btc_cash.html  dashboard.html  deposit.html  downline.html  eth.html  history.html  investment.html  login.html  passwordreset.html  plan.html  profile.html  register.html  reset.html  signup.html  withdraw.html
templates/components/: navbar.html
templates/sections/: academy.html  faq.html  home.html  terms.html
templates/tools/: carousel.html  navebar2.html  sidenav.html
webbroker/: apps.py  forms.py  models.py  views.py
